# fastAPI-test

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  README.md  deploy.sh  deployment_check.py  main.py  pyproject.toml  requirements-vercel.txt  requirements.txt  test_api.py  vercel.json
api/: app.py  index.py
src/api/: dependencies.py
src/api/routes/: recipes.py
src/core/: config.py  exceptions.py
src/models/: schemas.py
src/services/: gemini_service.py  image_service.py  llm7_service.py  recipe_service.py
src/utils/: helpers.py
